# libtruepeak

./: Makefile.am  Makefile.in  README.md  aclocal.m4  configure  configure.ac  license.txt
autom4te.cache/: output.0  requests  traces.0  traces.1  traces.2
src/: findtruepeak.c
src/truepeak/: truepeak.c  truepeak.h
